// The Firmament project
// Copyright (c) 2013 Malte Schwarzkopf <malte.schwarzkopf@cl.cam.ac.uk>
//
// A runtime sample of a task's resource demands.

package firmament;

import "base/resource_vector.proto";

message TaskPerfStatisticsSample {
  required uint64 task_id = 1;
  required uint64 timestamp = 2;
  optional uint64 vsize = 3;
  optional uint64 rsize = 4;
  optional uint64 sched_run = 5;
  optional uint64 sched_wait = 6;
  optional bool completed = 7;
  optional string hostname = 8;
  optional ResourceVector resources = 9;
}
