package firmament;

message TaskUsageRecord {
  required bool is_valid = 1;
  required uint64 ram_cap = 2;
  required uint64 disk_bw = 3;
  required uint64 disk_cap = 4;
}
